--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/strogonoff.html">Strogonoff</a></li>
+        <li><a href="recipes/brigadeiro.html">Brigadeiro</a></li>
+        <li><a href="recipes/bolo-de-fuba.html">Bolo de Fubá</a></li>
     </ul>
 
 </body>
